--- a/coffee_project/src/main/resources/templates/accuracy.html
+++ b/coffee_project/src/main/resources/templates/accuracy.html
@@ -4,10 +4,10 @@
     <title>Đặt lại mật khẩu</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="/static/healthy_drink-1_4x.png" th:href="@{/healthy_drink-1_4x.png}">
-
+    <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
+    <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
+          href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/bootstrap.min.js"></script>
@@ -38,15 +38,7 @@
                     <div style="background: #fefae0" class="login-wrap p-4 p-md-5">
                         <div class="d-flex">
                             <div class="w-100">
-                                <h2 class="mb-4">Đặt lại mật khẩu</h2>
-                            </div>
-                            <div class="w-100">
-                                <p class="social-media d-flex justify-content-end">
-                                    <a class="social-icon d-flex align-items-center justify-content-center"><span
-                                            class="fa fa-facebook"></span></a>
-                                    <a class="social-icon d-flex align-items-center justify-content-center"><span
-                                            class="fa fa-twitter"></span></a>
-                                </p>
+                                <h2 class="mb-4">Đặt Lại Mật Khẩu</h2>
                             </div>
                         </div>
                         <form th:action="@{/account/reset-password}" th:method="post"
@@ -54,20 +46,18 @@
                             <input name="username" hidden="hidden" th:value="${username}">
                             <div class="form-group mb-3">
                                 <label for="password">Mật khẩu mới</label>
-                                <input id="password" name="password" type="password" class="form-control" >
+                                <input id="password" name="password" th:value="${password}" type="password" class="form-control" >
                             </div>
                             <div class="form-group mb-3">
                                 <label for="password2">Nhập lại mật khẩu mới</label>
-                                <input type="password" name="password2" id="password2" class="form-control" required>
+                                <input type="password" name="password2" id="password2" th:value="${password2}" class="form-control" required>
                             </div>
                              <div class="form-group mb-3">
                                 <label for="emailCode">Nhập mã từ email</label>
-                                <input type="text" name="emailCode" id="emailCode" class="form-control" required>
+                                <input type="text" name="emailCode" id="emailCode" th:value="${emailCode}" class="form-control" required>
                             </div>
                             <div style="height: 40px">
-                                <div th:text="${msg}"
-                                     style="color: red;margin: 10px 0">
-                                </div>
+
                             </div>
                             <input type="text" th:value="${code}" name="code" hidden="hidden">
                             <div class="form-group">
@@ -82,6 +72,27 @@
         </div>
     </div>
 </section>
-
+<div class="position-fixed bottom-0 end-0 p-3">
+    <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto">Tin nhắn</strong>
+            <small>Bây giờ</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body text-info" th:text="${msg}">
+        </div>
+    </div>
+</div>
+<!-------------------------End Toast-------------------------------------------------------------->
+<script th:if="${msg}">
+    // toast
+    window.onload = function () {
+        let myAlert = document.getElementById('liveToast');//select id of toast
+        let bsAlert = new bootstrap.Toast(myAlert);//inizialize it
+        bsAlert.show();//show it
+    }
+</script>
+<script th:src="@{/bootstrap-5.0.2-dist/js/bootstrap.bundle.js}"
+        src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
