--- a/coffee_project/src/main/resources/templates/login.html
+++ b/coffee_project/src/main/resources/templates/login.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
-
+    <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
+          href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/bootstrap.min.js"></script>
@@ -36,33 +36,21 @@
                     <div style="background: #fefae0" class="login-wrap p-4 p-md-5">
                         <div class="d-flex">
                             <div class="w-100">
-                                <h2 class="mb-4" style="color: #6694a1  ">Đăng Nhập</h2>
-                            </div>
-                            <div class="w-100">
-                                <p class="social-media d-flex justify-content-end">
-                                    <a class="social-icon d-flex align-items-center justify-content-center"><span
-                                            class="fa fa-facebook"></span></a>
-                                    <a class="social-icon d-flex align-items-center justify-content-center"><span
-                                            class="fa fa-twitter"></span></a>
-                                </p>
+                                <h2 class="mb-4" style="color: #6694a1">Đăng Nhập</h2>
                             </div>
                         </div>
                         <form th:object="${accountDto}" th:action="@{/j_spring_security_check}" method="POST"
                               class="signin-form">
                             <div class="form-group mb-3">
-                                <label style="color: #6694a1"  for="username">Tên đăng nhập</label>
-                                <input id="username" th:field="*{accountName}" type="text"   class="form-control" required>
+                                <label style="color: #6694a1"  for="username">Tên đăng nhập <span style="color: red">*</span></label>
+                                <input id="username" th:field="*{accountName}" type="text"  th:value="${#request.getParameter('accountName')}" class="form-control" required>
                             </div>
                             <div class="form-group mb-3">
-                                <label style="color: #6694a1" for="password">Mật khẩu</label>
+                                <label style="color: #6694a1" for="password">Mật khẩu <span style="color: red">*</span></label>
                                 <input type="password" th:field="*{accountPassword}" id="password" class="form-control"
                                        required>
                             </div>
                             <div style="height: 40px">
-                                <div th:if="${#request.getParameter('error')=='true'}"
-                                     style="color: red;margin: 10px 0">
-                                    Đăng nhập thất bại
-                                </div>
                             </div>
 
                             <div class="form-group">
@@ -89,5 +77,28 @@
         </div>
     </div>
 </section>
+!-------------------------Toast-------------------------------------------------------------->
+<div class="position-fixed bottom-0 end-0 p-3">
+    <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto">Tin nhắn</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body text-info text-danger">
+            Đăng nhập thất bại
+        </div>
+    </div>
+</div>
+<!-------------------------End Toast-------------------------------------------------------------->
+<script th:if="${#request.getParameter('error')=='true'}">
+    // toast
+    window.onload = function () {
+        let myAlert = document.getElementById('liveToast');//select id of toast
+        let bsAlert = new bootstrap.Toast(myAlert);//inizialize it
+        bsAlert.show();//show it
+    }
+</script>
+<script th:src="@{/bootstrap-5.0.2-dist/js/bootstrap.bundle.js}"
+        src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
