[coffee][Cuong][Order]Future search

--- a/coffee_project/src/main/resources/templates/layout.html
+++ b/coffee_project/src/main/resources/templates/layout.html
@@ -105,17 +105,17 @@
                  style="background-color: #FFFFFF ;height: 5rem"
                  th:fragment="nav-bar">
                 <div class="container-fluid">
-                    <div class="mx-auto col-8 col-sm-4">
+                    <div class="mx-auto col-2 col-sm-4">
                         <button class="navbar-toggler bg-dark mt-3" type="button" data-bs-toggle="collapse"
                                 data-bs-target=".dual-collapse2">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                     </div>
-                    <div class="mx-auto col-4">
+                    <div class="col-10 col-sm-4 d-flex justify-content-center">
                         <span class="navbar-brand float-end text-dark text px-5"
-                              style="font-size: 40px">Queen Coffee</span>
+                              style="font-size: 40px;">Queen Coffee</span>
                     </div>
-                    <div class="navbar-collapse collapse dual-collapse2 col-4">
+                    <div class="navbar-collapse collapse dual-collapse2 col-sm-4">
                         <div class="navbar-nav ms-auto text-light">
                             <div class="dropdown mx-2">
                                 <label for="user-container" class="text-dark"
