--- a/coffee_project/src/main/resources/templates/oder/payment.html
+++ b/coffee_project/src/main/resources/templates/oder/payment.html
@@ -24,8 +24,10 @@
 
                     <div class="card">
                         <div class="card-body mx-4">
-                            <div class="container">
-                                <p class="my-5 mx-5" style="font-size: 30px;">Hóa đơn</p>
+                            <div class="container ">
+                                <div class="row d-flex ">
+                                    <p class="my-5 mx-5" style="font-size: 30px;text-align: center">Chi Tiết</p>
+                                </div>
                                 <div class="row">
                                     <ul class="list-unstyled">
                                         <li class="text-black" th:text="${order.user.userName}"></li>
