--- a/coffee_project/src/main/resources/templates/oder/chart.html
+++ b/coffee_project/src/main/resources/templates/oder/chart.html
@@ -12,7 +12,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
         .content {
-            transform: scale(0.99); /* Giá trị scale nhỏ hơn 1 để thu nhỏ nội dung */
+            transform: scale(0.94); /* Giá trị scale nhỏ hơn 1 để thu nhỏ nội dung */
         }
     </style>
 </head>
@@ -27,12 +27,17 @@
             <div class="row min-vh-100 content">
                 <div class="col-12">
                     <br>
-                    <h1 style="text-align: center">Biểu đồ lịch sử doanh thu </h1>
+                    <h1 style="text-align: center">Biểu Đồ Lịch Sử Doanh Thu </h1>
                     <div class="content">
-                        <input type="hidden" th:value="${msg0}" id="msg0">
-                        <input type="hidden" th:value="${msg1}" id="msg1">
-                        <input type="hidden" th:value="${msg2}" id="msg2">
-                        <canvas id="revenueChart"></canvas>
+                        <div>
+                            <input type="hidden" th:value="${msg0}" id="msg0">
+                            <input type="hidden" th:value="${msg1}" id="msg1">
+                            <input type="hidden" th:value="${msg2}" id="msg2">
+                            <input type="hidden" th:value="${msg3}" id="msg3">
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <canvas id="revenueChart"></canvas>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -46,19 +51,21 @@
 <script>
     // Trả về tháng
     let currentDate = new Date();
-    let month1 = currentDate.getMonth(); // Cộng 1 vì chỉ số của tháng là từ 0 đến 11
-    let month2 = currentDate.getMonth() - 1;
-    let month3 = currentDate.getMonth() - 2;
-    let msg = document.getElementById("msg0").value;
+    let month = currentDate.getMonth(); // Cộng 1 vì chỉ số của tháng là từ 0 đến 11
+    let month1 = currentDate.getMonth() - 1; // Cộng 1 vì chỉ số của tháng là từ 0 đến 11
+    let month2 = currentDate.getMonth() - 2;
+    let month3 = currentDate.getMonth() - 3;
+    let msg0 = document.getElementById("msg0").value;
     let msg1 = document.getElementById("msg1").value;
     let msg2 = document.getElementById("msg2").value;
+    let msg3 = document.getElementById("msg3").value;
     // Lấy dữ liệu doanh thu từ nguồn dữ liệu
     const revenueData = {
-        labels: ['Tháng ' + month3, 'Tháng ' + month2, 'Tháng ' + month1],
+        labels: ['Tháng ' + (month3 + 1), 'Tháng ' + (month2 + 1), 'Tháng ' + (month1 + 1), 'Tháng ' + (month + 1)],
         datasets: [{
-            data: [msg, msg1, msg2],
-            backgroundColor: ['rgba(75, 192, 192, 0.2)', 'rgba(255, 99, 132, 0.2)', 'rgba(54, 162, 235, 0.2)'],
-            borderColor: ['rgba(75, 192, 192, 1)', 'rgba(255, 99, 132, 1)', 'rgba(54, 162, 235, 1)'],
+            data: [msg0, msg1, msg2, msg3],
+            backgroundColor: ['rgba(75, 192, 192, 0.2)', 'rgba(255, 99, 132, 0.2)', 'rgba(54, 162, 235, 0.2)', 'rgba(255, 0, 235, 0.2)'],
+            borderColor: ['rgba(75, 192, 192, 1)', 'rgba(255, 99, 132, 1)', 'rgba(54, 162, 235, 1)', 'rgba(255, 0, 235, 1)'],
             borderWidth: 1
         }]
     };
