tín[coffee][product] update view

--- a/coffee_project/src/main/resources/templates/product/list.html
+++ b/coffee_project/src/main/resources/templates/product/list.html
@@ -248,7 +248,7 @@
                                             Bạn có chắc chắn muốn xóa sản phẩm
                                             <span style="color: red" id="name"> </span>?
                                             <!--                                có id là: <span style="color: red" id="idDelete"></span> ?-->
-                                            <p style="color: red">Hoạt động này không thể hoàn tác! </p>
+                                            <p style="color: red"><b>Lưu ý:</b> Hoạt động này không thể hoàn tác! </p>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
