[COFFEE][NHAT][USER]update view and controller

--- a/coffee_project/src/main/resources/templates/user/create.html
+++ b/coffee_project/src/main/resources/templates/user/create.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Đăng ký thông tin nhân viên</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <style th:insert="/layout::style"></style>
+    <style th:replace="/layout::style"></style>
     <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
     <!--                    //File css Img-->
     <style>
