--- a/coffee_project/src/main/resources/templates/user/new-employee.html
+++ b/coffee_project/src/main/resources/templates/user/new-employee.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Danh sách nhân viên mới </title>
-    <style th:insert="/layout::style"></style>
+    <style th:replace="/layout::style"></style>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
