--- a/coffee_project/src/main/resources/templates/user/list.html
+++ b/coffee_project/src/main/resources/templates/user/list.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Danh Sách Nhân Viên</title>
-    <style th:insert="/layout::style"></style>
+    <style th:replace="/layout::style"></style>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="/js/jquery-3.7.0.min.js"></script>
     <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
     <style>
@@ -59,7 +60,6 @@
                                                 class="btn btn-primary">
                                             <i class="fas fa-search"></i>
                                         </button>
-
 
                                     </div>
                                 </form>
@@ -189,7 +189,7 @@
                 <div class="modal-body">
                     <input id="userId" hidden="hidden" name="userId">
                     <input name="userName" id="userName" hidden="hidden">
-                    <div>Bạn có xác nhận xoá người dùng có tên là: <span id="userNameDisplay"></span></div>
+                    <div>Bạn có xác nhận xoá người dùng có tên là: <span id="userNameDisplay"></span>?</div>
                     <div style="color: red"><strong>Lưu ý:</strong> không thể hoàn tác hành động này!</div>
                 </div>
                 <div class="modal-footer">
@@ -303,8 +303,11 @@
         bsAlert.show();//show it
     }
 </script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 <script th:src="@{/bootstrap-5.0.2-dist/js/bootstrap.bundle.js}"
         src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
+
 </body>
 </html>
