--- a/coffee_project/src/main/resources/templates/forgot.html
+++ b/coffee_project/src/main/resources/templates/forgot.html
@@ -39,23 +39,59 @@
                                 <h2 class="mb-4" style="color: #6694a1">Quên Mật Khẩu</h2>
                             </div>
                         </div>
-                        <form  action="/account/forgot-password" method="post" id="form"
+                        <form action="/account/forgot-password" method="post" id="form"
                               class="signin-form">
                             <div class="form-group mb-3">
-                                <label for="username" style="color: #6694a1">Tên đăng nhập <span style="color: red">*</span></label>
-                                <input id="username" name="username" th:value="${username}" type="text" class="form-control">
+                                <label for="username" style="color: #6694a1">Tên đăng nhập <span
+                                        style="color: red">*</span></label>
+                                <input id="username" name="username" th:value="${username}" type="text"
+                                       class="form-control">
                             </div>
                             <div class="form-group mb-3">
-                                <label for="email" style="color: #6694a1">Email <span style="color: red">*</span></label>
+                                <label for="email" style="color: #6694a1">Email <span
+                                        style="color: red">*</span></label>
                                 <input type="email" name="email" th:value="${email}" id="email" class="form-control">
                             </div>
-                            <div style="height: 40px">
+                            <div style="margin-top: 50px;height: 50px">
+                                <div id="load" class="toast hide" style="background: none;box-shadow: none;border: none" aria-live="assertive" aria-atomic="true">
+                                    <div class="spinner-grow text-primary" role="status">
+                                        <span class="sr-only">Loading...</span>
+                                    </div>
+                                    <div class="spinner-grow text-secondary" role="status">
+                                        <span class="sr-only">Loading...</span>
+                                    </div>
+                                    <div class="spinner-grow text-success" role="status">
+                                        <span class="sr-only">Loading...</span>
+                                    </div>
+                                    <div class="spinner-grow text-danger" role="status">
+                                        <span class="sr-only">Loading...</span>
+                                    </div>
+                                    <div class="spinner-grow text-warning" role="status">
+                                        <span class="sr-only">Loading...</span>
+                                    </div>
+                                    <div class="spinner-grow text-info" role="status">
+                                        <span class="sr-only">Loading...</span>
+                                    </div>
+                                    <div class="spinner-grow text-light" role="status">
+                                        <span class="sr-only">Loading...</span>
+                                    </div>
+                                    <div class="spinner-grow text-dark" role="status">
+                                        <span class="sr-only">Loading...</span>
+                                    </div>
+                                    <div class="spinner-grow text-primary" role="status">
+                                        <span class="sr-only">Loading...</span>
+                                    </div>
+                                    <div class="spinner-grow text-secondary" role="status">
+                                        <span class="sr-only">Loading...</span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
 
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" id="button" class="form-control btn btn-primary rounded submit px-3">
-                                    Lấy mã
-                                </button>
+                                    <button type="submit" id="button"
+                                            class="form-control btn btn-primary rounded submit px-3">
+                                        Lấy mã
+                                    </button>
+                                </div>
                             </div>
                         </form>
                     </div>
@@ -78,34 +114,7 @@
     </div>
 </div>
 <!-------------------------End Toast-------------------------------------------------------------->
-<div class="position-fixed bottom-0 end-0 p-3">
-    <div id="load" class="toast hide" aria-live="assertive" aria-atomic="true" >
-        <div class="spinner-grow text-primary" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-secondary" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-success" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-danger" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-warning" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-info" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-light" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-dark" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-    </div>
-</div>
+
 <script th:if="${msg}">
     // toast
     window.onload = function () {
@@ -118,9 +127,9 @@
     document.getElementById('form').addEventListener('submit', function(){
         let myAlert = document.getElementById('load');//select id of toast
         let bsAlert = new bootstrap.Toast(myAlert);//inizialize it
-        bsAlert.show();//show it
         let button = document.getElementById("button");
-        button.disabled = true;
+        button.hidden = true;
+        bsAlert.show();//show it
     });
 </script>
 
