--- a/coffee_project/src/main/resources/templates/user/list.html
+++ b/coffee_project/src/main/resources/templates/user/list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <title>Danh Sách Nhân Viên</title>
     <style th:replace="/layout::style"></style>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,9 +15,11 @@
             z-index: 1040 !important;
         }
     </style>
+
 </head>
 <body>
 <div class="container-fluid">
+
     <div class="row">
         <div th:replace="layout::side-bar">
         </div>
