--- a/coffee_project/src/main/resources/templates/layout.html
+++ b/coffee_project/src/main/resources/templates/layout.html
@@ -58,41 +58,41 @@
                 <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start "
                     id="menu">
                     <li class="nav-item w-100">
-                        <a href="/order/" class="nav-link align-middle px-0 text-light">
+                        <a href="/order/" class="nav-link align-middle px-3 text-light w-100">
                             <i class="fa-solid fa-file-pen" style="color: #ffffff;"></i><span
                                 class="ms-1 d-none d-sm-inline">Đặt sản phẩm</span>
                         </a>
                     </li>
                     <li class="nav-item w-100">
-                        <a href="/customer/list" class="nav-link px-0 align-middle text-light">
+                        <a href="/customer/list" class="nav-link px-3 align-middle text-light">
                             <i class="fa-solid fa-users" style="color: #ffffff;"></i><span
                                 class="ms-1 d-none d-sm-inline">Quản lý khách hàng</span> </a>
                     </li>
 
                     <li th:if="${#request.isUserInRole('ROLE_ADMIN')}" class="nav-item w-100">
-                        <a href="/user/list" class="nav-link px-0 align-middle text-light">
+                        <a href="/user/list" class="nav-link px-3 align-middle text-light">
                             <i class="fa-solid fa-person" style="color: #ffffff;"></i> <span
                                 class="ms-1 d-none d-sm-inline">Quản lý nhân viên</span> </a>
                     </li>
                     <li th:if="${#request.isUserInRole('ROLE_ADMIN')}" class="nav-item w-100">
-                        <a href="/user/new-employee" class="nav-link px-0 align-middle text-light">
-                            <i class="fa-solid fa-person" style="color: #ffffff;"></i> <span
+                        <a href="/user/new-employee" class="nav-link px-3 align-middle text-light">
+                            <i class="fa-solid fa-user-plus" style="color: #ffffff;"></i><span
                                 class="ms-1 d-none d-sm-inline">Nhân viên mới</span> </a>
                     </li>
                     <li th:if="${#request.isUserInRole('ROLE_ADMIN')}" class="nav-item w-100">
-                        <a href="/product" class="nav-link px-0 align-middle text-light">
+                        <a href="/product" class="nav-link px-3 align-middle text-light">
                             <i class="fa-solid fa-mug-hot" style="color: #ffffff;"></i> <span
                                 class="ms-1 d-none d-sm-inline">Quản lý sản phẩm</span>
                         </a>
                     </li>
                     <li th:if="${#request.isUserInRole('ROLE_ADMIN')}" class="nav-item w-100">
-                        <a href="/account/admin" class="nav-link px-0 align-middle text-light">
+                        <a href="/account/admin" class="nav-link px-3 align-middle text-light">
                             <i class="fa-solid fa-users-gear" style="color: #ffffff;"></i> <span
                                 class="ms-1 d-none d-sm-inline">Quản lý tài khoản</span>
                         </a>
                     </li>
                     <li class="nav-item w-100">
-                        <a href="/order/revenue" class="nav-link px-0 align-middle text-light">
+                        <a href="/order/revenue" class="nav-link px-3 align-middle text-light">
                             <i class="fa-solid fa-chart-simple" style="color: #ffffff;"></i> <span
                                 class="ms-1 d-none d-sm-inline">Doanh thu 3 tháng gần nhất</span>
                         </a>
