--- a/coffee_project/src/main/resources/templates/login.html
+++ b/coffee_project/src/main/resources/templates/login.html
@@ -77,7 +77,7 @@
         </div>
     </div>
 </section>
-!-------------------------Toast-------------------------------------------------------------->
+<!-------------------------Toast-------------------------------------------------------------->
 <div class="position-fixed bottom-0 end-0 p-3">
     <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
