--- a/coffee_project/src/main/resources/templates/user/list.html
+++ b/coffee_project/src/main/resources/templates/user/list.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Danh Sách Nhân Viên</title>
     <style th:replace="/layout::style"></style>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
-          href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
+          href="../static/bootstrap-5.0.2-dist/cs/bootstrap.css">
     <script src="/js/jquery-3.7.0.min.js"></script>
     <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
     <style>
@@ -34,40 +34,29 @@
 
                     <div class="justify-content-center" style="margin-bottom: 20px">
 
-                        <div class="row">
-                            <div class="col-1">
+                        <form th:action="@{/user/list}" th:method="get">
+                            <div class="d-flex justify-content-end">
 
-                                <a style="text-decoration: none" href="/order/">
-                                    <button title="Quay lại"
-                                            class="btn btn-primary">
-                                        <i class="fa-solid fa-circle-arrow-left"></i></button>
-                                </a>
+                                <div class="form-outline" style="margin-right: 0.6rem">
+                                    <input id="search-input" name="search" type="search"
+                                           placeholder="Tên nhân viên"
+                                           class="form-control" th:value="${search}"/>
+                                </div>
+                                <button title="Tìm kiếm" type="submit"
+                                        class="btn btn-primary">
+                                    <i class="fas fa-search"></i>
+                                </button>
 
                             </div>
+                        </form>
 
-                            <div class="col-4">
-                            </div>
-                            <div class="col-7">
-                                <form th:action="@{/user/list}" th:method="get">
-                                    <div class="d-flex justify-content-end">
-
-                                        <div class="form-outline" style="margin-right: 0.6rem">
-                                            <input id="search-input" name="search" type="search"
-                                                   placeholder="Tên nhân viên"
-                                                   class="form-control" th:value="${search}"/>
-                                        </div>
-                                        <button title="Tìm kiếm" type="submit"
-                                                class="btn btn-primary">
-                                            <i class="fas fa-search"></i>
-                                        </button>
-
-                                    </div>
-                                </form>
-                            </div>
-
+                    </div>
+                    <div class="table-responsive" style="margin-top: 20px">
+                        <div th:if="${userPage.getTotalElements() <= 0}">
+                            <h1 style="color: red;text-align: center">Không Có Nhân Viên Nào</h1>
                         </div>
+                        <div th:if="${userPage.getTotalElements() > 0}">
 
-                        <div class="table-responsive" style="margin-top: 20px">
                             <table class="table table-hover">
                                 <thead>
                                 <th scope="col">STT</th>
@@ -80,83 +69,87 @@
 
                                 </thead>
                                 <tr th:each="user, status :${userPage}">
-                                    <th th:text="${status.count}">
-                                    <td th:text="${user.userName}">
-                                    <td>
-                                        <div th:if="${user.userGender == null}">Khác</div>
-                                        <div th:if="${user.userGender}">Nam</div>
-                                        <div th:if="${!user.userGender}">Nữ</div>
-                                    </td>
-                                    <td th:text="${user.account.accountName}">
-                                    <td th:text="${#numbers.formatDecimal(user.userSalary, 0, 'COMMA', 0, 'POINT') + ' VND'}"></td>
-                                    <td th:text="${user.employeeType.employeeTypeName}">
-                                    <td style="text-align: center">
 
-                                        <a th:href="@{/user/change-form/{id}(id=${user.userId})}">
-                                            <button title="Sửa lương và ca làm việc" type="button"
-                                                    class="btn btn-primary">
-                                                <i class="fa-solid fa-pen-to-square"></i>
+                                    <div th:if="${user.account.role.roleName != 'ROLE_ADMIN'}">
+                                        <th th:text="${status.count}">
+                                        <td th:text="${user.userName}">
+                                        <td>
+                                            <div th:if="${user.userGender == null}">Khác</div>
+                                            <div th:if="${user.userGender}">Nam</div>
+                                            <div th:if="${!user.userGender}">Nữ</div>
+                                        </td>
+                                        <td th:text="${user.account.accountName}">
+                                        <td th:text="${#numbers.formatDecimal(user.userSalary, 0, 'COMMA', 0, 'POINT') + ' VND'}"></td>
+                                        <td th:text="${user.employeeType.employeeTypeName}">
+                                        <td style="text-align: center">
+
+                                            <a th:href="@{/user/change-form/{id}(id=${user.userId})}">
+                                                <button title="Sửa lương và ca làm việc" type="button"
+                                                        class="btn btn-primary">
+                                                    <i class="fa-solid fa-pen-to-square"></i>
+                                                </button>
+                                            </a>
+                                        </td>
+                                        <td style="text-align: center">
+
+                                            <!-- Button trigger detail modal -->
+                                            <button title="Chi tiết" type="button" class="btn btn-primary"
+                                                    data-bs-toggle="modal"
+                                                    data-bs-target="#exampleModal1"
+                                                    th:attr="onclick=|showDetail(${user.userId})|">
+                                                <i class="fa-solid fa-circle-info"></i>
                                             </button>
-                                        </a>
-                                    </td>
-                                    <td style="text-align: center">
-
-                                        <!-- Button trigger detail modal -->
-                                        <button title="Chi tiết" type="button" class="btn btn-primary"
-                                                data-bs-toggle="modal"
-                                                data-bs-target="#exampleModal1"
-                                                th:attr="onclick=|showDetail(${user.userId})|">
-                                            <i class="fa-solid fa-circle-info"></i>
-                                        </button>
-                                    </td>
-                                    <td style="text-align: center">
-                                        <button title="Xoá" style="text-align: center" type="button"
-                                                class="btn btn-danger"
-                                                data-bs-toggle="modal"
-                                                data-bs-target="#exampleModal"
-                                                th:attr="onclick=|showInfo(${user.userId},'${user.userName}')|">
-                                            <i class="fa-regular fa-trash-can"></i>
-                                        </button>
-                                    </td>
+                                        </td>
+                                        <td style="text-align: center">
+                                            <button title="Xoá" style="text-align: center" type="button"
+                                                    class="btn btn-danger"
+                                                    data-bs-toggle="modal"
+                                                    data-bs-target="#exampleModal"
+                                                    th:attr="onclick=|showInfo(${user.userId},'${user.userName}')|">
+                                                <i class="fa-regular fa-trash-can"></i>
+                                            </button>
+                                        </td>
+                                    </div>
                                 </tr>
                             </table>
                         </div>
-                        <!---------------------------Paging--------------------------------------------------------------->
-                        <div th:if="${userPage.totalPages >1}">
-                            <div class="d-flex justify-content-center">
-                                <nav aria-label="Page navigation example">
-                                    <ul class="pagination">
-                                        <li th:class="${!userPage.hasPrevious()} ? 'page-item disabled' : 'page-item'">
-                                            <a
-                                                    class="page-link"
-                                                    th:href="@{/user/list/(page=${userPage.number -1},search=${search})}">Trước</a>
-                                        </li>
-
-                                        <li class="page-link disabled"><span
-                                                th:text="${userPage.number +1}"></span>/<span
-                                                th:text="${userPage.totalPages}"></span>
-                                        </li>
-
-                                        <li th:class="${!userPage.hasNext()} ? 'page-item disabled' : 'page-item'"><a
-                                                class="page-link"
-                                                th:href="@{/user/list/(page=${userPage.number +1},search=${search})}">Sau</a>
-                                        </li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                        <!------------------------End Paging------------------------------------------------------------>
                     </div>
+                    <!---------------------------Paging--------------------------------------------------------------->
+                    <div th:if="${userPage.totalPages >1}">
+                        <div class="d-flex justify-content-center">
+                            <nav aria-label="Page navigation example">
+                                <ul class="pagination">
+                                    <li th:class="${!userPage.hasPrevious()} ? 'page-item disabled' : 'page-item'">
+                                        <a
+                                                class="page-link"
+                                                th:href="@{/user/list/(page=${userPage.number -1},search=${search})}">Trước</a>
+                                    </li>
 
-                    <!------------------END CODE------------------------------------------------------------------------->
+                                    <li class="page-link disabled"><span
+                                            th:text="${userPage.number +1}"></span>/<span
+                                            th:text="${userPage.totalPages}"></span>
+                                    </li>
 
-
+                                    <li th:class="${!userPage.hasNext()} ? 'page-item disabled' : 'page-item'"><a
+                                            class="page-link"
+                                            th:href="@{/user/list/(page=${userPage.number +1},search=${search})}">Sau</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <!------------------------End Paging------------------------------------------------------------>
                 </div>
-            </div>
-            <div th:replace="layout::footer">
+
+                <!------------------END CODE------------------------------------------------------------------------->
+
+
             </div>
         </div>
+        <div th:replace="layout::footer">
+        </div>
     </div>
+</div>
 </div>
 
 
@@ -303,9 +296,7 @@
         bsAlert.show();//show it
     }
 </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+
 <script th:src="@{/bootstrap-5.0.2-dist/js/bootstrap.bundle.js}"
         src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
 
