--- a/coffee_project/src/main/resources/templates/user/new-employee.html
+++ b/coffee_project/src/main/resources/templates/user/new-employee.html
@@ -28,17 +28,8 @@
                     <!------------------CODE------------------------------->
                     <h1 class="col-11" style="margin-top: 2rem;text-align: center">
                         Danh Sách Nhân Viên Mới</h1>
-                    <div class="row" style="margin-top: 15px;margin-bottom: 20px">
 
-                        <a class="col-12 mt-2" style="text-decoration: none" href="/user/list">
-                            <button title="Quay lại"
-                                    class="btn btn-primary">
-                                <i class="fa-solid fa-circle-arrow-left"></i></button>
-                        </a>
-
-                    </div>
-
-                    <table class="table table-hover table-responsive">
+                    <table class="table table-hover table-responsive" style="margin-top: 70px">
                         <thead>
                         <th scope="col">STT</th>
                         <th scope="col">Tên</th>
