[Quan][Account][coffee] chỉnh form email

--- a/coffee_project/src/main/resources/templates/forgot.html
+++ b/coffee_project/src/main/resources/templates/forgot.html
@@ -109,7 +109,7 @@
             <small>Bây giờ</small>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
-        <div class="toast-body text-info" th:text="${msg}">
+        <div class="toast-body text-danger" th:text="${msg}">
         </div>
     </div>
 </div>
