--- a/coffee_project/src/main/resources/templates/accuracy.html
+++ b/coffee_project/src/main/resources/templates/accuracy.html
@@ -45,15 +45,15 @@
                               class="signin-form">
                             <input name="username" hidden="hidden" th:value="${username}">
                             <div class="form-group mb-3">
-                                <label for="password">Mật khẩu mới</label>
+                                <label for="password">Mật khẩu mới <span style="color: red">*</span></label>
                                 <input id="password" name="password" th:value="${password}" type="password" class="form-control" >
                             </div>
                             <div class="form-group mb-3">
-                                <label for="password2">Nhập lại mật khẩu mới</label>
+                                <label for="password2">Nhập lại mật khẩu mới <span style="color: red">*</span></label>
                                 <input type="password" name="password2" id="password2" th:value="${password2}" class="form-control" required>
                             </div>
                              <div class="form-group mb-3">
-                                <label for="emailCode">Nhập mã từ email</label>
+                                <label for="emailCode">Nhập mã từ email <span style="color: red">*</span></label>
                                 <input type="text" name="emailCode" id="emailCode" th:value="${emailCode}" class="form-control" required>
                             </div>
                             <div style="height: 40px">
